# dotfiles.vorpal

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Vorpal.toml  justfile  renovate.json
.claude/scripts/: cycle_metrics.py  docket_claim.sh  docket_close.sh  evolve_signals.py  go_get_offline.sh  govulncheck.sh  next_doc_number.sh  plan_collision_check.py  regression_diff.sh  secret_scan.sh  symmetry_check.py
.github/workflows/: vorpal.yaml
agents/: kubernetes-engineer.md  project-manager.md  qa-engineer.md  rust-engineer.md  sdet.md  security-engineer.md  senior-engineer.md  staff-engineer.md  team-lead.md  ux-designer.md
agents/claude-code/: project-manager.md  sdet.md  security-engineer.md  senior-engineer.md  staff-engineer.md  team-lead.md  ux-designer.md
agents/codex/: project-manager.toml  sdet.toml  security-engineer.toml  senior-engineer.toml  staff-engineer.toml  team-lead.toml  ux-designer.toml
docs/changelog/: dev-init-skill.md  dev-team-skill.md  evolve-agents-skill.md  evolve-skills-skill.md  project-manager.md  sdet.md  senior-engineer.md  staff-engineer.md  ux-designer.md
docs/spec/: architecture.md  code-quality.md  operations.md  performance.md  review-strategy.md  security.md  testing.md
docs/tdd/: agent-delegation-protocol.md  design-complete-gate-before-planning.md  evolutionary-theory-core-for-evolve-skills.md  (+6 more)
src/: dev.rs  devenv.rs  file.rs  lib.rs  make.rs  user.rs  userenv.rs  vorpal.rs
src/user/: bat.rs  (+13 more)
tests/: codex_payload.rs  doctrine_check.test.sh  task-completed-hook.test.sh  teammate-idle-hook.test.sh
(+501 files in other folders)
