[package]
edition = "2021"
name = "dotfiles"
version = "0.1.0"

[[bin]]
name = "vorpal"
path = "src/vorpal.rs"

[dependencies]
anyhow = "1"
indoc = { version = "2" }
tokio = { features = ["rt-multi-thread"], version = "1" }
vorpal-artifacts = { git = "https://github.com/ALT-F4-LLC/artifacts.vorpal.git", branch = "main" }
vorpal-sdk = { git = "https://github.com/ALT-F4-LLC/vorpal.git", branch = "main" }
